fix spacing

--- a/css/demo.css
+++ b/css/demo.css
@@ -330,8 +330,8 @@ ul li div.percent p {
 #partners div.content {
     text-align: left;
     padding: 64px;
-    padding-top: 0;
-    padding-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 10px;
     display: inherit;
 }
 
@@ -341,9 +341,12 @@ ul li div.percent p {
     text-align: left;
 }
 
+
+
 #partners #aerial img {
     margin-right: 40px;
     width: 30vh;
+    padding-top: 10px;
     border-radius: 1em;
     box-shadow: 10px 0px 20px 10px rgb(0, 0, 0, .2);
 }
@@ -856,6 +859,23 @@ p#copyright_mark a:hover{
 }
 
 @media screen and (max-width: 450px) {
+
+    #partners p.pText {
+        margin-bottom: 30px;
+    }
+
+   #last{
+       margin-top: 40px;
+       margin-bottom: 40px;
+   }
+
+   #bottom_nav #twitter, #bottom_nav #instagram, #bottom_nav #discord {
+    margin-top: 10px;
+   }
+
+    #ahr{
+        margin-top: 60px;
+    }
 
     .bg1 {
         background-size:contain;
